--- a/source/stylesheets/_vendor.sass
+++ b/source/stylesheets/_vendor.sass
@@ -6,6 +6,8 @@
  *= require pure/base-min
  */
 
+  *= require font-awesome
+
 // if you want to replace the default values first copy the
 // vendor/assets/bower/typeplate/scss/_vars-typeplate.scss somewhere else and then
 // import it **before** typeplate scss stylesheet
@@ -13,8 +15,11 @@
 @import typeplate/scss/typeplate
 
 // sass mixin library
-@import bourbon
+//@import bourbon
 
 // a lightweight semantic grid framework for Sass and Bourbon.
 // @import neat
 
+// fontawesome icon library
+$fa-font-path: "font-awesome/fonts"
+@import font-awesome/scss/font-awesome.scss
