Converted project from sass to scss.

--- a/source/stylesheets/_modules.scss
+++ b/source/stylesheets/_modules.scss
@@ -1,10 +1,9 @@
 //  ==========================================================================
- *  Modules
- *  ========================================================================== */
+//  Modules
+//  ==========================================================================
 
 // Sass code that doesn't output CSS. Things like mixin declarations, functions and
-   variables.
+//   variables.
 
 // global variables
-@import modules/vars
-
+@import "modules/vars";
