--- a/source/stylesheets/base/_layout.scss
+++ b/source/stylesheets/base/_layout.scss
@@ -1,8 +1,3 @@
 /*  ==========================================================================
- *  Base stuff
+ *  Layout
  *  ========================================================================== */
-
-@import base/layout
-@import base/fonts
-@import base/colors
-
