--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -1,4 +1,7 @@
 /*  ==========================================================================
- *  Colors
+ *  Base stuff
  *  ========================================================================== */
 
+@import "base/layout";
+@import "base/fonts";
+@import "base/colors";
