--- a/source/stylesheets/partials/_browse_happy.scss
+++ b/source/stylesheets/partials/_browse_happy.scss
@@ -1,9 +1,9 @@
 /*  Browse Happy prompt
  *  ========================================================================== */
 
-.browsehappy
-    margin: 0.2em 0
-    background: #ccc
-    color: #000
-    padding: 0.2em 0
-
+.browsehappy {
+  margin: 0.2em 0;
+  background: #cccccc;
+  color: black;
+  padding: 0.2em 0;
+}
