Enabled modular-scale

--- a/source/stylesheets/_vendor.scss
+++ b/source/stylesheets/_vendor.scss
@@ -14,7 +14,7 @@
 // vendor/assets/bower/typeplate/scss/_vars-typeplate.scss somewhere else and then
 // import it **before** typeplate scss stylesheet
 // @import modules/vars-typeplate
-@import "typeplate/scss/typeplate";
+@import 'typeplate/scss/typeplate';
 
 // sass mixin library
 //@import bourbon
@@ -24,4 +24,6 @@
 
 
 $fa-font-path: '//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/fonts';
-@import "font-awesome/scss/font-awesome";
+@import 'font-awesome/scss/font-awesome';
+
+@import 'modular-scale';
