Moved font-awesome from bower to ruby gem package.

--- a/source/stylesheets/_vendor.scss
+++ b/source/stylesheets/_vendor.scss
@@ -4,7 +4,6 @@
 
 /*
  *= require pure/base-min
- *= require font-awesome/scss/font-awesome
 
 */
 
@@ -23,7 +22,7 @@
 // @import neat
 
 
-$fa-font-path: '//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/fonts';
 @import 'font-awesome/scss/font-awesome';
+$fa-font-path: 'fonts';
 
 @import 'modular-scale';
